Ness in English
XD

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,122 +1,122 @@
 {
-    "error": "무엥",
+    "error": "Eww.. Something is wrong!",
     "google": {
-        "emptyResponse": "검색엔진에 접속할 수 없어요!",
-        "resultsBelow": "검색 결과가 예상보다 미달해요!",
-        "question": "Google 검색어를 입력해주세요!",
-        "changeKorean": "한국어로 바꿨어요!"
+        "emptyResponse": "Cannot connect to Search Engines!",
+        "resultsBelow": "The amount of results is less than expected!",
+        "question": "Please enter a Google search term!",
+        "changeKorean": "Changed to Korean!"
     },
     "get": {
-        "question": "메시지 ID를 입력해주세요!",
-        "error": "숫자가 아니거나 ID 범위를 초과했어요!",
-        "bring": "번 메시지 가져왔어요!",
-        "notFound": "번 메시지를 찾을 수 없어요!"
+        "question": "Please enter your Message ID!",
+        "error": "It's not a number or it's out of range!",
+        "bring": "I got the %number%th message!",
+        "notFound": "I can't find the %number%th message!"
     },
     "image": {
-        "question": "이미지 검색어를 입력해주세요!",
-        "error": "앗! 이미지를 찾을 수 없어요!"
+        "question": "Please enter an image query!",
+        "error": "Oops, I can't find the image!"
     },
     "ping": {
-        "question": "Ping이에요!\nIP 또는 Domain을 입력해주세요!",
-        "error": "IPv4 또는 Domain이 아니에요!"
+        "question": "This is Ping! Please enter an \nIP or Domain!",
+        "error": "It is not an IPv4 or Domain!"
     },
     "calc": {
-        "question": "수식을 입력해주세요!",
-        "error": "계산 결과가 이상해요!"
+        "question": "Please enter the formula!",
+        "error": "The calculation result is strange!"
     },
     "dday": {
-        "question": "날짜를 형식에 맞춰 입력해주세요!\nex) <code>2018 01 01</code>",
-        "error": "날짜가 아닌 것 같아요!",
-        "today": "오늘이에요!",
-        "past": "일 지났어요!",
-        "future": "일 남았어요!"
+        "question": "Please enter the date according to the format!\nex) <code>2018 01 01</code>",
+        "error": "It's not a date!",
+        "today": "It's today!!",
+        "past": "%date% days have passed!",
+        "future": "%date% days left!"
     },
     "currency": {
-        "help": "통화와 배수를 포함해 명령해주세요!\n예시) /환율 KRW 10000",
-        "errorUnit": "통화 코드가 올바르지 않아요!",
-        "errorMultiple": "올바른 배수를 입력하세요!"
+        "help": "Please enter the base currency and Multiple! \n예시) /currency USD 1",
+        "errorUnit": "Invalid currency code!",
+        "errorMultiple": "Please enter the correct Multiple!"
     },
     "translate": {
-        "question": "번역할 문장을 입력해주세요!",
-        "error": "번역 결과가 없어요!"
+        "question": "Please enter a sentence to translate!",
+        "error": "There are no translation results!"
     },
     "admins": {
-        "error": "그룹에서만 사용할 수 있어요!"
+        "error": "This is only available for groups!"
     },
     "ratio": {
-        "question": "두 숫자를 입력해주세요!",
-        "error": "잘못된 값이에요!",
-        "errorLimit": "연산 범위를 초과했어요!"
+        "question": "Please enter two numbers!",
+        "error": "It's an invalid value!",
+        "errorLimit": "The calculation range has been exceeded!"
     },
     "dice": {
-        "question": "둘 이상의 단어를 입력해주세요! 🎲"
+        "question": "Please enter more than one word! 🎲"
     },
     "pick": {
-        "question": "둘 이상의 단어를 입력해주세요!",
-        "error": "둘 이상의 단어를 입력해주세요!"
+        "question": "Please enter more than one word!",
+        "error": "Please enter more than one word!"
     },
     "map": {
-        "questionAddr": "주소를 입력해주세요!",
-        "questionPlace": "장소를 입력해주세요!",
-        "errorAddr": "주소를 찾을 수 없어요!",
-        "errorCoord": "좌표를 찾을 수 없어요!",
-        "errorPlace": "장소를 찾을 수 없어요!",
-        "errorLocation": "GPS 신호를 찾을 수 없어요!"
+        "questionAddr": "Please enter your address!",
+        "questionPlace": "Please enter a place!",
+        "errorAddr": "Address not found!",
+        "errorCoord": "No coordinates found!",
+        "errorPlace": "Could not find place!",
+        "errorLocation": "No GPS signal found!"
     },
     "weather": {
-        "question": "한국 또는 외국의 주소를 입력해주세요!",
-        "error": "결과가 없어요. 외국이면 영어로 입력해주세요!",
-        "errorRequest": "날씨 서버에 접속할 수 없어요!"
+        "question": "Please enter Korean or foreign address!",
+        "error": "There is no result. If you are outside of Korea, please enter in English!",
+        "errorRequest": "We could not connect to the weather server!"
     },
     "contact": {
-        "found": "님의 유저 정보를 찾았어요!"
+        "found": "I have found user information of %username%!"
     },
     "leave": {
-        "bye": "안녕~",
-        "permission": "권한이 없습니다."
+        "bye": "See you again!",
+        "permission": "You do not have permission."
     },
     "length": {
-        "question": "길이를 측정할 문자열을 입력해주세요!",
-        "error": "길이를 측정할 수 없어요!"
+        "question": "Please enter a string to measure the length!,
+        "error": "Can not measure the length!"
     },
     "html": {
-        "question": "<a href=\"https://core.telegram.org/bots/api#html-style\">HTML</a>을 입력해주세요!",
-        "error": "해당 태그는 지원하지 않아요!\n<a href=\"https://core.telegram.org/bots/api#html-style\">태그 목록</a>에 없거나 태그가 중첩되어 있는지 확인해주세요."
+        "question": "Please enter <a href=\"https://core.telegram.org/bots/api#html-style\"> HTML </a>!",
+        "error": "This tag is not supported!\nPlease make sure that it is not in the <a href=\"https://core.telegram.org/bots/api#html-style\">Tag list</a> or the tag is nested."
     },
     "markdown": {
-        "question": "<a href=\"https://core.telegram.org/bots/api#markdown-style\">Markdown</a>을 입력해주세요!"
+        "question": "Please enter <a href=\"https://core.telegram.org/bots/api#markdown-style\">Markdown</a>"
     },
     "youtube": {
-        "question": "동영상 검색어를 입력해주세요!",
-        "error": "동영상을 찾을 수 없어요!"
+        "question": "Please enter a video search query!",
+        "error": "I can not find the video!"
     },
     "papago": {
-        "question": "번역할 문장을 입력해주세요!",
-        "error": "번역 결과가 없어요!"
+        "question": "Please enter sentence to translate!",
+        "error": "No translation results!"
     },
     "code": {
-        "question": "코드를 입력 해주세요!",
+        "question": "Please enter the code!",
         "error": "",
-        "onlyText": "Text만 지원해요!",
-        "replyOnly": "답장 전용 명령이에요! 답장을 통해 써주세요!"
+        "onlyText": "Supports Text only!",
+        "replyOnly": "It's a reply-only command! Write through your reply!"
     },
     "enko": {
-        "question": "변환할 문자를 입력해주세요!",
-        "onlyText": "Text만 지원해요!"
+        "question": "Please enter the characters to convert!",
+        "onlyText": "Supports Text only!"
     },
     "koen": {
-        "question": "변환할 문자를 입력해주세요!",
-        "errorInput": "초성+중성 또는 초성+중성+종성의 한글만 넣어주세요!"
+        "question": "Please enter the characters to convert!",
+        "errorInput": "Please fill out the complete Hangul!"
     },
     "decode": {
-        "question": "디코드할 문자열을 입력해주세요!"
+        "question": "Please enter the string to decode!"
     },
     "search": {
-        "notSupport": "아직 지원하지 않는 타입이에요!",
-        "replyOnly": "답장 전용 명령이에요! 답장을 통해 써주세요!"
+        "notSupport": "It is not a type yet!",
+        "replyOnly": "It's a reply-only command! Write through your reply!"
     },
     "run": {
-        "question": "언어와 코드를 입력해주세요!",
+        "question": "Please enter your language and code!",
         "language": "assembly, ats, bash, c, clojure, cobol, coffeescript, cpp, crystal, csharp, d, elixir, elm, erlang, fsharp, go, groovy, haskell, idris, java, javascript, julia, kotlin, lua, mercury, nim, ocaml, perl, perl6, php, python, ruby, rust, scala, swift, typescript"
     }
 }
