--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,122 +1,122 @@
 {
-    "error": "무엥",
+    "error": "meh...",
     "google": {
-        "emptyResponse": "검색엔진에 접속할 수 없어요!",
-        "resultsBelow": "검색 결과가 예상보다 미달해요!",
-        "question": "Google 검색어를 입력해주세요!",
-        "changeKorean": "한국어로 바꿨어요!"
+        "emptyResponse": "Cannot acsess to search engine!",
+        "resultsBelow": "Search results are less then expectation!",
+        "question": "Please enter Google search keyowrd!!",
+        "changeKorean": "Changed to Korean!"
     },
     "get": {
-        "question": "메시지 ID를 입력해주세요!",
-        "error": "숫자가 아니거나 ID 범위를 초과했어요!",
+        "question": "Please enter the Message ID!",
+        "error": "It's not a numerals or it exceeded the range!",
         "bring": "번 메시지 가져왔어요!",
         "notFound": "번 메시지를 찾을 수 없어요!"
     },
     "image": {
-        "question": "이미지 검색어를 입력해주세요!",
-        "error": "앗! 이미지를 찾을 수 없어요!"
+        "question": "Please enter the image search keyword.!",
+        "error": "Whoa!, I could not find image!"
     },
     "ping": {
-        "question": "Ping이에요!\nIP 또는 Domain을 입력해주세요!",
-        "error": "IPv4 또는 Domain이 아니에요!"
+        "question": "It's Ping!\nEnter the IP or Domain!",
+        "error": "It's not IPv4 or Domain!"
     },
     "calc": {
-        "question": "수식을 입력해주세요!",
-        "error": "계산 결과가 이상해요!"
+        "question": "Please entert the equation!",
+        "error": "Calculation result is weird!..."
     },
     "dday": {
-        "question": "날짜를 형식에 맞춰 입력해주세요!\nex) <code>2018 01 01</code>",
-        "error": "날짜가 아닌 것 같아요!",
-        "today": "오늘이에요!",
-        "past": "일 지났어요!",
-        "future": "일 남았어요!"
+        "question": "Please enter the date in form!\nex) <code>2018 01 01</code>",
+        "error": "I think it's not a date",
+        "today": "It's today!",
+        "past": "days past!",
+        "future": "days left!"
     },
     "currency": {
-        "help": "통화와 배수를 포함해 명령해주세요!\n예시) /환율 KRW 10000",
-        "errorUnit": "통화 코드가 올바르지 않아요!",
-        "errorMultiple": "올바른 배수를 입력하세요!"
+        "help": "Please enter the currency and multiplier!\n예시) /환율 KRW 10000",
+        "errorUnit": "Currency code is not valid!",
+        "errorMultiple": "Please enter the valid multiplier!"
     },
     "translate": {
-        "question": "번역할 문장을 입력해주세요!",
-        "error": "번역 결과가 없어요!"
+        "question": "Please enter the sentence for translation!",
+        "error": "There is no translation result!"
     },
     "admins": {
-        "error": "그룹에서만 사용할 수 있어요!"
+        "error": "It is only available in groups.!"
     },
     "ratio": {
-        "question": "두 숫자를 입력해주세요!",
-        "error": "잘못된 값이에요!",
-        "errorLimit": "연산 범위를 초과했어요!"
+        "question": "Please enter the two number!",
+        "error": "It's wrong value!",
+        "errorLimit": "It exceeded calculation range!"
     },
     "dice": {
-        "question": "둘 이상의 단어를 입력해주세요! 🎲"
+        "question": "Please enter the more than two words! 🎲"
     },
     "pick": {
-        "question": "둘 이상의 단어를 입력해주세요!",
-        "error": "둘 이상의 단어를 입력해주세요!"
+        "question": "Please enter the more than two words!",
+        "error": "Please enter the more than two words!"
     },
     "map": {
-        "questionAddr": "주소를 입력해주세요!",
-        "questionPlace": "장소를 입력해주세요!",
-        "errorAddr": "주소를 찾을 수 없어요!",
-        "errorCoord": "좌표를 찾을 수 없어요!",
-        "errorPlace": "장소를 찾을 수 없어요!",
-        "errorLocation": "GPS 신호를 찾을 수 없어요!"
+        "questionAddr": "Pleae enter the address!",
+        "questionPlace": "Please enter the place!",
+        "errorAddr": "I can't find address!",
+        "errorCoord": "I can't find coordinates!",
+        "errorPlace": "I can't find place!",
+        "errorLocation": "I can't find GPS signal!"
     },
     "weather": {
-        "question": "한국 또는 외국의 주소를 입력해주세요!",
-        "error": "결과가 없어요. 외국이면 영어로 입력해주세요!",
-        "errorRequest": "날씨 서버에 접속할 수 없어요!"
+        "question": "Please enter the address of Korea or Foreign countries!",
+        "error": "There is no results.If it is overseas please enter in english!",
+        "errorRequest": "I cannot acess weather server!"
     },
     "contact": {
         "found": "님의 유저 정보를 찾았어요!"
     },
     "leave": {
-        "bye": "안녕~",
-        "permission": "권한이 없습니다."
+        "bye": "Bye~",
+        "permission": "There is no permission."
     },
     "length": {
-        "question": "길이를 측정할 문자열을 입력해주세요!",
-        "error": "길이를 측정할 수 없어요!"
+        "question": "Please give me a string to measure the length!",
+        "error": "I can't measure the length!"
     },
     "html": {
-        "question": "<a href=\"https://core.telegram.org/bots/api#html-style\">HTML</a>을 입력해주세요!",
-        "error": "해당 태그는 지원하지 않아요!\n<a href=\"https://core.telegram.org/bots/api#html-style\">태그 목록</a>에 없거나 태그가 중첩되어 있는지 확인해주세요."
+        "question": "Please enter <a href=\"https://core.telegram.org/bots/api#html-style\">HTML</a>!",
+        "error": "That tag is unsupported!\nIt's not in the <a href=\"https://core.telegram.org/bots/api#html-style\">tag list</a> or check if tag is overlapped."
     },
     "markdown": {
-        "question": "<a href=\"https://core.telegram.org/bots/api#markdown-style\">Markdown</a>을 입력해주세요!"
+        "question": "Please enter <a href=\"https://core.telegram.org/bots/api#markdown-style\">Markdown</a>!"
     },
     "youtube": {
-        "question": "동영상 검색어를 입력해주세요!",
-        "error": "동영상을 찾을 수 없어요!"
+        "question": "Please enter video search keyword!",
+        "error": "I can't find the video!"
     },
     "papago": {
-        "question": "번역할 문장을 입력해주세요!",
-        "error": "번역 결과가 없어요!"
+        "question": "Please enter sentence to translate!",
+        "error": "There is no translation result!"
     },
     "code": {
-        "question": "코드를 입력 해주세요!",
+        "question": "Please enter the code!",
         "error": "",
-        "onlyText": "Text만 지원해요!",
-        "replyOnly": "답장 전용 명령이에요! 답장을 통해 써주세요!"
+        "onlyText": "Only Text is supported!",
+        "replyOnly": "This command is replay only.Please command with reply!"
     },
     "enko": {
-        "question": "변환할 문자를 입력해주세요!",
-        "onlyText": "Text만 지원해요!"
+        "question": "Please enter the character to convert!",
+        "onlyText": "Only Text is supported!"
     },
     "koen": {
-        "question": "변환할 문자를 입력해주세요!",
-        "errorInput": "초성+중성 또는 초성+중성+종성의 한글만 넣어주세요!"
+        "question": "Please enter the character to convert!",
+        "errorInput": "Only enter Korean in this form\ninitial consonant+medial,initial consonant+medial+final consonant"
     },
     "decode": {
-        "question": "디코드할 문자열을 입력해주세요!"
+        "question": "Please enter the string to convert!"
     },
     "search": {
-        "notSupport": "아직 지원하지 않는 타입이에요!",
-        "replyOnly": "답장 전용 명령이에요! 답장을 통해 써주세요!"
+        "notSupport": "It is unsupported type!",
+        "replyOnly": "This command is replay only.Please command with reply!"
     },
     "run": {
-        "question": "언어와 코드를 입력해주세요!",
+        "question": "Please input language and code!",
         "language": "assembly, ats, bash, c, clojure, cobol, coffeescript, cpp, crystal, csharp, d, elixir, elm, erlang, fsharp, go, groovy, haskell, idris, java, javascript, julia, kotlin, lua, mercury, nim, ocaml, perl, perl6, php, python, ruby, rust, scala, swift, typescript"
     }
 }
